[package]
name = "iterator_ilp"
#
# Release checklist:
#
# - Cross-check all public API documentation, update as needed
# - Update changelog
# - Update version number in Cargo.toml
# - Push branch, make PR, automerge on CI success
# - Cargo publish
# - Roll an annotated git tag
# - Add a github release
#
version = "3.0.1"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2021"
rust-version = "1.75.0"
description = "Iterator extensions for instruction-parallel reductions"
repository = "https://github.com/HadrienG2/iterator_ilp"
license = "MPL-2.0"
keywords = ["iterator", "ilp", "instruction-parallel", "simd", "unroll"]
categories = ["algorithms", "concurrency", "mathematics", "no-std::no-alloc", "rust-patterns"]

[features]
default = ["std"]
std = []

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
hwlocality = "1.0.0-alpha.11"
multiversion = "0.8"
proptest = { version = "1.8", default-features = false, features = ["handle-panics", "std"] }
rand = "0.9"
static_assertions = "1.1.0"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
codegen-units = 1

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

